# build-vcpkg-cache

./: CMakeLists.txt  README.md  dummy.cpp  vcpkg.json
.github/workflows/: windows-build.yml
